Credentials in .env.

--- a/.env
+++ b/.env
@@ -7,5 +7,5 @@ LOGIN_PIN_INPUT="#pinInputSelector"
 LOGIN_BUTTON="#buttonlogin"
 
 #Credentials
-LOGIN_NAME=asdf
-LOGIN_PIN=12345
+LOGIN_NAME=name
+LOGIN_PIN=pin
