Added logout action.

--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ BASE_URL=https://www.dkb.de/banking
 LOGIN_NAME_INPUT="#loginInputSelector"
 LOGIN_PIN_INPUT="#pinInputSelector"
 LOGIN_BUTTON="#buttonlogin"
+LOGOUT_BUTTON="#logout"
 
 #Credentials
 LOGIN_NAME=name
