Added navigation to transactions and getting all available accounts.

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,10 @@ LOGIN_PIN_INPUT="#pinInputSelector"
 LOGIN_BUTTON="#buttonlogin"
 LOGOUT_BUTTON="#logout"
 
+TRANSACTIONS="#menu_0\2e 0\2e 0-node"
+
+ACCOUNT_SELECT="#id-1615473160_slAllAccounts"
+
 #Credentials
 LOGIN_NAME=
 LOGIN_PIN=
