Added change the time range, selecting the account and getting all transactions.

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@
 BASE_URL=https://www.dkb.de/banking
 
 #Selectors
+AJAX_LOADING="body > div.ajax_loading"
+
 LOGIN_NAME_INPUT="#loginInputSelector"
 LOGIN_PIN_INPUT="#pinInputSelector"
 LOGIN_BUTTON="#buttonlogin"
@@ -10,6 +12,14 @@ LOGOUT_BUTTON="#logout"
 TRANSACTIONS="#menu_0\2e 0\2e 0-node"
 
 ACCOUNT_SELECT="#id-1615473160_slAllAccounts"
+
+TRANSACTIONS_DEBIT_FROM="#id-1615473160_transactionDate"
+TRANSACTIONS_DEBIT_TO="#id-1615473160_toTransactionDate"
+TRANSACTIONS_CREDIT_FROM="#id1579108072_postingDate"
+TRANSACTIONS_CREDIT_TO="#id1579108072_toPostingDate"
+TRANSACTIONS_SEARCH="#searchbutton"
+
+TRANSACTIONS_RESULT_CLASS="mainRow"
 
 #Credentials
 LOGIN_NAME=
