Tweaked some timings and added a wildcard for changing selector ids.

--- a/.env.example
+++ b/.env.example
@@ -11,12 +11,12 @@ LOGOUT_BUTTON="#logout"
 
 TRANSACTIONS="#menu_0\2e 0\2e 0-node"
 
-ACCOUNT_SELECT="#id-1615473160_slAllAccounts"
+ACCOUNT_SELECT="select[id$='_slAllAccounts']"
 
-TRANSACTIONS_DEBIT_FROM="#id-1615473160_transactionDate"
-TRANSACTIONS_DEBIT_TO="#id-1615473160_toTransactionDate"
-TRANSACTIONS_CREDIT_FROM="#id1579108072_postingDate"
-TRANSACTIONS_CREDIT_TO="#id1579108072_toPostingDate"
+TRANSACTIONS_DEBIT_FROM="input[id$='_transactionDate']"
+TRANSACTIONS_DEBIT_TO="input[id$='_toTransactionDate']"
+TRANSACTIONS_CREDIT_FROM="input[id$='_postingDate']"
+TRANSACTIONS_CREDIT_TO="input[id$='_toPostingDate']"
 TRANSACTIONS_SEARCH="#searchbutton"
 
 TRANSACTIONS_RESULT_CLASS="mainRow"
