--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "jodli",
   "license": "MIT",
   "dependencies": {
-    "dotenv-safe": "^5.0.1",
+    "dotenv": "^5.0.1",
     "loglevel": "^1.6.1",
     "puppeteer": "^1.3.0"
   }
