--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "jodli",
   "license": "MIT",
   "dependencies": {
+    "commander": "^2.15.1",
     "dotenv": "^5.0.1",
     "loglevel": "^1.6.1",
     "puppeteer": "^1.3.0"
