--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "commander": "^2.15.1",
     "dotenv": "^5.0.1",
+    "fs-extra": "^5.0.0",
     "loglevel": "^1.6.1",
     "puppeteer": "^1.3.0"
   }
