--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "commander": "^2.15.1",
     "dotenv": "^5.0.1",
     "fs-extra": "^5.0.0",
+    "listr": "^0.14.1",
     "loglevel": "^1.6.1",
     "puppeteer": "^1.3.0"
   }
